version/0.31/_sources/api/solver/_autosummary/settings/histogram_1.rst.txt
:orphan:

.. _histogram_1:

histogram
=========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.histogram_1
    :show-inheritance:

.. rubric:: Attributes

==================================================   ==============================

Attribute                                                                   Summary

==================================================   ==============================
:ref:`histogram_options <histogram_options>`                   The settings object.

:ref:`histogram_parameters <histogram_parameters>`            The parameter object.

:ref:`plot_write_sample <plot_write_sample>`             'plot_write_sample' child.

:ref:`reduction <reduction>`                                     'reduction' child.

==================================================   ==============================

.. rubric:: Methods

==========================================================   =====================================================================================================================

Method                                                                                                                                                                     Summary

==========================================================   =====================================================================================================================
:ref:`compute_sample <compute_sample>`                                                                                               Compute minimum/maximum of a sample variable.

:ref:`delete_sample <delete_sample>`                                                                                                                      'delete_sample' command.

:ref:`list_samples <list_samples>`                                                                                                         Show all samples in loaded sample list.

:ref:`read_sample_file <read_sample_file>`                                                                                       Read a sample file and add it to the sample list.

:ref:`dpm_sample_contour_plots <dpm_sample_contour_plots>`       Prepare named expressions from data in a DPM sample file (collected at a cut plane surface) for contour plotting.

==========================================================   =====================================================================================================================

.. rubric:: Included in:

==========================================   ===========================

Parent                                                           Summary

==========================================   ===========================
:ref:`discrete_phase_6 <discrete_phase_6>`       'discrete_phase' child.

==========================================   ===========================

